--- a/14-DivaOnWeb.tex
+++ b/14-DivaOnWeb.tex
@@ -1,4 +1,4 @@
-\chapter{Other implementations\label{chap:general}}
+\chapter{Other implementations\label{chap:divaonweb}}
 %------------------------
 
 \lettrine[lines=2, loversize=-0.1, lraise=0.1]{}{} 
@@ -8,11 +8,12 @@
 \newpage %  
 
 \section{\diva-on-web}
-
+%---------------------
 
 
 \section{Ocean Data View}
+%------------------------
 
 
-
-\section{\diva Matlab toolbox}
+\section{Matlab toolbox}
+%-----------------------------
